Re-adding global kudusync install
Global install of kudusync *is* used on Linux

--- a/1.2/Dockerfile
+++ b/1.2/Dockerfile
@@ -106,7 +106,8 @@ RUN mkdir -p /opt/npm/2.15.8/node_modules \
 ENV PATH $PATH:/opt/nodejs/6.9.1/bin
 
 # Install Kudu
-RUN cp /tmp/kudu.conf /etc/apache2/sites-available/kudu.conf \
+RUN npm install -g kudusync
+  && cp /tmp/kudu.conf /etc/apache2/sites-available/kudu.conf \
   && cp /tmp/apache2.conf /etc/apache2/apache2.conf  \
   && unzip -q -o /tmp/Kudu.zip \
   && mkdir /opt/Kudu \
