chmodding new starter.sh command wrapper

--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -126,6 +126,7 @@ RUN npm install -g kudusync \
   && mv /opt/Kudu/Web.config2 /opt/Kudu/Web.config \
   && chmod 755 /opt/Kudu/bin/kudu.exe \
   && chmod 755 /opt/Kudu/bin/node_modules/.bin/kuduscript \
+  && chmod -f 755 /opt/Kudu/bin/Scripts/starter.sh \
   && mkdir -p /opt/Kudu/local \
   && chmod 755 /opt/Kudu/local
 
