--- a/1.3/Dockerfile
+++ b/1.3/Dockerfile
@@ -41,7 +41,17 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 \
   && wget -O /tmp/npm-2.15.9.zip https://github.com/npm/npm/archive/v2.15.9.zip \
   && wget -O /tmp/npm-3.9.5.zip https://github.com/npm/npm/archive/v3.9.5.zip \
   && wget -O /tmp/npm-3.10.3.zip https://github.com/npm/npm/archive/v3.10.3.zip \
-  && wget -O /tmp/npm-3.10.10.zip https://github.com/npm/npm/archive/v3.10.10.zip 
+  && wget -O /tmp/npm-3.10.10.zip https://github.com/npm/npm/archive/v3.10.10.zip \
+  && a2enmod proxy \
+  && a2enmod proxy_http \
+  && a2enmod proxy_wstunnel \
+  && a2enmod rewrite \
+  && a2enmod proxy_ajp \
+  && a2enmod deflate \
+  && a2enmod headers \ 
+  && a2enmod proxy_balancer \
+  && a2enmod proxy_connect \
+  && a2enmod proxy_html
 
 # Install npm and node
 RUN mkdir -p /opt/npm/2.15.8/node_modules \
