--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -157,7 +157,7 @@ RUN echo "deb http://download.mono-project.com/repo/debian beta/snapshots/c7-ms/
 RUN apt-get install -y libreadline-dev bzip2 build-essential libssl-dev zlib1g-dev libpq-dev libsqlite3-dev \
   curl patch gawk g++ gcc make libc6-dev patch libreadline6-dev libyaml-dev sqlite3 autoconf \
   libgdbm-dev libncurses5-dev automake libtool bison pkg-config libffi-dev bison libxslt-dev \
-  libxml2-dev --no-install-recommends
+  libxml2-dev libmysqlclient-dev --no-install-recommends
 
 # rbenv 
 RUN git clone https://github.com/rbenv/rbenv.git /usr/local/.rbenv
