--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 \
   --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
   && echo "deb http://download.mono-project.com/repo/debian jessie/snapshots/5.0.0.100/. main" > \
   /etc/apt/sources.list.d/mono-xamarin.list \
-  && echo "deb http://ftp.debian.org/debian jessie-backports main" >> /etc/apt/sources.list &&
+  && echo "deb http://ftp.debian.org/debian jessie-backports main" >> /etc/apt/sources.list \
   && apt-get update \
   && apt-get install -y apt-utils --no-install-recommends \
   && apt-get install -y unzip --no-install-recommends \
