WIP Install 2.0.2 and warm cache for 1.0/1.1/2.0 MVC apps

--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -226,7 +226,7 @@ RUN mv /usr/bin/ssh /usr/bin/ssh.original \
   && chown root:root /usr/bin/ssh \
   && chmod 755 /usr/bin/ssh
 
-# Install .NET Core 1/2
+# Install .NET Core
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         libc6 \
@@ -254,15 +254,45 @@ RUN curl -SL $DOTNET_SDK_DOWNLOAD_URL --output dotnet.tar.gz \
     && rm dotnet.tar.gz \
     && ln -s /usr/share/dotnet/dotnet /usr/bin/dotnet
 
-# Trigger the population of the local package cache
-ENV NUGET_XMLDOC_MODE skip
+# Moving the package cache to the disk image will require the cache to be repopulated
+# for each new build done in a new container instance, but it's *much* faster than
+# using a location on the user's site volume and does not require them to use their storage
 ENV NUGET_PACKAGES /var/nuget
-RUN mkdir warmup \
+
+# Trigger the population of the local package cache and NuGetFallbackFolder
+# We install the 1.x web templates so we can create and restore 1.0 and 1.1 MVC apps as well as 2.0
+# See https://github.com/aspnet/Tooling/blob/master/missing-template.md
+# Note that after populating the cache we need to chmod 777 every directory underneath
+# so the Kudu user can access them; this can be removed if we run Kudu as root later.
+ENV NUGET_XMLDOC_MODE skip
+RUN mkdir /var/nuget \
+    && chmod a+rw /var/nuget \
+    && dotnet new -i "Microsoft.DotNet.Web.ProjectTemplates.1.x::1.0.0-*" \
+    && mkdir warmup \
     && cd warmup \
     && dotnet new \
     && cd .. \
     && rm -rf warmup \
-    && rm -rf /tmp/NuGetScratch
+    && mkdir warmup \
+    && cd warmup \
+    && dotnet new mvc -f netcoreapp1.1 \
+    && dotnet restore \
+    && cd .. \
+    && rm -rf warmup \
+    && mkdir warmup \
+    && cd warmup \
+    && dotnet new mvc -f netcoreapp1.0 \
+    && dotnet restore \
+    && cd .. \
+    && rm -rf warmup \
+    && mkdir warmup \
+    && cd warmup \
+    && dotnet new mvc \
+    && dotnet restore \
+    && cd .. \
+    && rm -rf warmup \
+    && rm -rf /tmp/NuGetScratch \
+    && find /var/nuget -type d -exec chmod 777 {} \;
 
 # PHP5.6
 RUN apt-get update \
