Add log analyzer

--- a/1.7/kudu.conf
+++ b/1.7/kudu.conf
@@ -20,6 +20,16 @@ Listen 8181
             DirectoryIndex index.aspx index.html Default.cshtml
     </Directory>
 
+    Alias /loganalyzer "/opt/LogAnalyzer"
+    MonoApplications "/loganalyzer:/opt/LogAnalyzer"
+    <Directory "/opt/LogAnalyzer">
+            Options Indexes FollowSymLinks MultiViews
+            AllowOverride AuthConfig FileInfo
+            Require all granted
+            SetHandler mono
+            DirectoryIndex index.aspx index.html Default.cshtml
+    </Directory>
+
     ErrorLog /var/log/apache2/kudu-error.log
 
     # Possible values include: debug, info, notice, warn, error, crit,
