Removing everything in /tmp (chown /tmp in startup is very slow on small workers)

--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -328,7 +328,8 @@ RUN mv /usr/bin/ssh /usr/bin/ssh.original \
   && chmod 755 /usr/bin/ssh
   
 COPY hostingstart.html /home/site/wwwroot/hostingstart.html
-RUN chmod -R 777 /home
+RUN chmod -R 777 /home \
+  && rm -rf /tmp/*
 
 EXPOSE 8181
 
